[tool.poetry]
name = "python-di"
version = "1.1.1"
description = "Fully automatic dependency injection for python"
authors = ["Damian Łukawski <damian@lukawscy.pl>"]
license = "MIT"
packages = [
    { include = "di" },
]
readme = "README.md"
homepage = "https://github.com/dlski/python-di"
repository = "https://github.com/dlski/python-di"
keywords = ["di", "dependency-injection", "type-hints", "annotations"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.poetry.dependencies]
python = ">=3.7 <3.10"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.5.4"
flake8 = "^3.8.3"
flake8-isort = "^4.0.0"
flake8-black = "^0.2.1"
pytest = "^6.1.0"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
